update correcting spacing

--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,7 @@ button {
 
 .navigation {
   display: flex;
-  height: 108px;
+  height: 60px;
   padding: 0px 20%;
   justify-content: space-between;
   align-items: center;
@@ -121,7 +121,7 @@ button {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 50px 0px 25px 0px;
+  padding: 35px 0px 25px 0px;
   gap: 15px;
 }
 
@@ -140,7 +140,7 @@ button {
   display: flex;
   justify-content: space-between;
   margin: auto;
-  width: 70%;
+  width: 50%;
 }
 
 .CTA-left,
@@ -179,7 +179,7 @@ button {
   bottom: 0;
   left: 0;
   right: 0;
-  height: 422px;
+  height: 425px;
   width: 650px;
   margin: auto;
   background: url(/public/main-navigation-image.png) no-repeat top;
@@ -232,7 +232,7 @@ button {
 }
 
 .section-content .common-paragraph {
-  width: 65%;
+  width: 100%;
 }
 
 .app-intro .section-content {
@@ -263,7 +263,7 @@ button {
 }
 
 .user-app-intro .section-content .common-paragraph {
-  width: 95%;
+  padding-left: 29%;
 }
 
 /* END APP INTRO */
@@ -295,10 +295,6 @@ button {
   align-self: stretch;
   text-align: start;
   color: #997c5c;
-}
-
-.general-user .section-content .common-paragraph {
-  width: 100%;
 }
 
 .general-user .section-content .common-paragraph {
@@ -368,7 +364,7 @@ button {
 }
 
 .app-intro .app-intro-bottom .app-intro-content .app-intro-block {
-  width: 294px;
+  width: 300px;
   padding: 0px 8px;
 }
 
@@ -454,7 +450,7 @@ button {
 
 .app-section-block .app-section-content .content-block {
   display: flex;
-  width: 337px;
+  width: 383px;
   padding: 0px 7px;
   flex-direction: column;
   justify-content: center;
@@ -705,7 +701,7 @@ button {
   #main2,
   #main3,
   #main4 {
-    background-size: 94% auto !important;
+    background-size: 100% auto !important;
   }
   .app-section .phone-media {
     width: 56%;
@@ -842,7 +838,7 @@ button {
   }
 
   .common-title {
-    font-size: 26px;
+    font-size: 25px;
     font-weight: 700;
     line-height: 44px;
     letter-spacing: -0.36px;
@@ -874,7 +870,7 @@ button {
   }
 
   .header {
-    padding: 25px 0px;
+    padding: 74px 0px;
   }
 
   .header > img {
@@ -883,7 +879,7 @@ button {
   }
 
   .header .subtitle {
-    padding: 0 20px;
+    padding: 0 12px;
     font-size: 14px;
     line-height: 20px;
   }
@@ -994,7 +990,7 @@ button {
 
   .general-user .section-content .common-subtitle,
   .general-user .section-content .common-paragraph {
-    width: 90%;
+    width: 100%;
   }
 
   .app-intro .app-intro-top {
@@ -1199,10 +1195,11 @@ button {
 
 @media only screen and (max-width: 520px) {
   .hero {
-    height: 900px;
+    height: 844px;
+    background-position: center;
   }
   .navigation-image {
-    height: 30% !important;
+    height: 34% !important;
   }
 
   .general-user.app-intro {
@@ -1226,7 +1223,7 @@ button {
 
   .app-intro .app-intro-top .section-content-white {
     width: auto;
-    padding: 100px 24px;
+    padding: 100px 4px;
     display: block;
   }
 
